<resources>
    <string name="app_name">AULAHUB</string>
    <string name="bienvenid">Bienvenid@</string>
    <string name="ingrese_sus_datos">Ingrese sus datos</string>
    <string name="aulahub">AULAHUB</string>
    <string name="email">Email</string>
    <string name="TextPassword">Contraseña</string>
    <string name="TextIniciarSesion">Iniciar Sesion</string>
    <string name="showEmail">Email</string>
    <string name="logo_de_la_facultad">logo de la facultad</string>
    <string name="seleccion_aula">Selecciona el aula a reservar</string>
    <string name="capacidad_para_30_personas">Capacidad para 30 personas</string>
    <string name="laboratorio_de_c_mputo_b">Laboratorio de Cómputo B</string>
    <string name="capacidad_para_50_personas">Capacidad para 50 personas</string>
    <string name="laboratorio_de_c_mputo_a">Laboratorio de Cómputo A</string>
    <string name="laboratorio_de_computo_c">Laboratorio de Cómputo </string>
    <string name="capacidad_para_200_personas">Capacidad para 200 personas</string>
    <string name="auditorio_fic">Auditorio FIC</string>
    <string name="modulo_1">Modulo 1</string>
    <string name="modulo_2">Modulo 2</string>
    <string name="materia">Materia</string>
    <string name="grupo">Grupo</string>
    <string name="btnSignOut">Cerrar sesion</string>
    <string name="Seleccionar_aula_admin">Seleccionar aula</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="menu">Menú</string>
    <string name="LogOut">Cerrar sesion</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="ayuda">Ayuda</string>
    <string name="ajustes">Ajustes</string>
    <string name="Change_password_text">Cambiar contraseña</string>
    <string name="_11_00_12_00">11:00-12:00</string>
    <string name="_10_00_11_00">10:00-11:00</string>
    <string name="_9_00_10_00">9:00-10:00</string>
    <string name="_8_00_9_00">8:00-9:00</string>
    <string name="_7_00_8_00">7:00-8:00</string>
    <string name="hora">Hora</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="_1_00_2_00">1:00-2:00</string>
    <string name="_2_00_3_00">2:00-3:00</string>
    <string name="_3_00_4_00">3:00-4:00</string>
    <string name="_4_00_5_00">4:00-5:00</string>
    <string name="_5_00_6_00">5:00-6:00</string>
    <string name="registrar_reserva">Registrar Reserva</string>
    <string name="guardar">Guardar</string>
    <string name="salon">Salón</string>
    <string name="motivo">Motivo</string>
    <string name="nombre_del_maestro">Nombre del maestro</string>
    <string name="turno">Tuno</string>
    <string name="continuar">Continuar</string>
    <string name="subir_foto">Subir foto</string>
    <string name="elegir_foto">Elegir foto</string>
    <string name="borrar_foto">Borrar foto</string>
    <string name="reserva_registrada_correctamente">Reserva registrada correctamente</string>
    <string name="materiaa">Materia:</string>
    <string name="salonn">Salon:</string>
    <string name="grupoo">Grupo:</string>
    <string name="fechas">Fechas:</string>
    <string name="horarios">Horarios:</string>
    <string name="ver_mis_reservas">Ver mis reservas</string>
    <string name="turnoo">Turno:</string>
    <string name="Misreservas">Mis reservas</string>
    <string name="fechas_y_horarios">Fechas y Horarios:</string>
    <string name="reservar">Reservar</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="maestro">Maestro:</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="solicitudes_pendientes">Solicitudes Pendientes</string>
    <string name="a_n_no_tienes_solicitudes_aceptadas">Aún no tienes solicitudes aceptadas.</string>
    <string name="solicitudes_aceptadas">Solicitudes Aceptadas</string>
    <string name="a_n_no_tienes_solicitudes_rechazadas">Aún no tienes solicitudes rechazadas.</string>
    <string name="solicitudes_rechazadas">Solicitudes Rechazadas</string>
    <string name="universidad_autonoma_de_sinaloa">UNIVERSIDAD AUTONOMA DE SINALOA</string>
    <string name="facultad_de_informatica_culiacan">FACULTAD DE INFORMATICA CULIACAN</string>
    <string name="HORARIOS">HORARIOS</string>
    <string name="laboratorio_de_computo_a_lunes_a_viernes_de_7_00_a_13_00_horas_y_de_14_00_a_20_00_horas">Laboratorio de computo A y B: Lunes a Viernes de 7:00 a 13:00 horas y de 14:00 a 20:00 horas</string>
    <string name="laboratorio_de_computo_c_lunes_a_viernes_de_8_00_a_20_00_horas">Laboratorio de computo C: Lunes a viernes de 8:00 a 20:00 horas.</string>
    <string name="reglamento">Reglamento</string>
    <string name="status">Status:</string>
</resources>