<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:text="@string/registrar_reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/TVNombreMaestro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_maestro" />
    <TextView
        android:id="@+id/TVMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/materia" />

    <TextView
        android:id="@+id/TVSalon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salon" />

    <EditText
        android:id="@+id/ETMotivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/motivo"/>


</LinearLayout>
