<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centroti"
    android:id="@+id/login">

    <RelativeLayout
        android:id="@+id/contraste"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3FFFFFF">

        <TextView
            android:id="@+id/TVaulahub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/aulahub"
            android:textColor="@color/Azul_Fic"
            android:textSize="33sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CVlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="350dp"
            android:backgroundTint="@color/Azul_Fic"
            app:cardCornerRadius="28dp"
            app:cardElevation="8dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/TVwelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/bienvenid"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TVLoginFic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/ingrese_sus_datos"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/TVEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/ETemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/TVpasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/TextPassword"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/ETpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/Cafe_Fic"
                    android:text="@string/TextIniciarSesion" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>