<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/IbtnMenu"
                android:layout_width="@dimen/Margin_Widht_40dp"
                android:layout_height="@dimen/Margin_height_35dp"
                android:layout_marginStart="@dimen/Margin_Start_10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_menu" />

            <ImageButton
                android:id="@+id/IbtnNotificaciones"
                android:layout_width="@dimen/Margin_Widht_40dp"
                android:layout_height="@dimen/Margin_height_35dp"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/notificaciones"
                android:src="@drawable/ic_notificaciones" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnPerfil"
                android:layout_width="@dimen/Margin_Widht_40dp"
                android:layout_height="@dimen/Margin_height_35dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/Margin_End_10dp"
                android:contentDescription="@string/foto_de_perfil"
                android:src="@drawable/ic_perfil"
                app:shapeAppearanceOverlay="@style/CircularImage"
                android:scaleType="centerCrop"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/tv_seleccionar_aula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_aulaA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_seleccionar_aula"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@android:color/white"
        app:strokeColor="@android:color/black"
        app:strokeWidth="1dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laboratorio_de_c_mputo_a"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacidad_para_50_personas"
                android:textStyle="italic"
                android:textSize="14sp"
                android:layout_marginStart="50dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_aulaB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/card_aulaA"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@android:color/white"
        app:strokeColor="@android:color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laboratorio_de_c_mputo_b"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacidad_para_30_personas"
                android:textStyle="italic"
                android:textSize="14sp"
                android:layout_marginStart="50dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_aulaC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/card_aulaB"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@android:color/white"
        app:strokeColor="@android:color/black"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laboratorio_de_computo_c"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacidad_para_30_personas"
                android:textStyle="italic"
                android:textSize="14sp"
                android:layout_marginStart="50dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_auditorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/card_aulaC"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@android:color/white"
        app:strokeColor="@android:color/black"
        app:strokeWidth="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auditorio_fic"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacidad_para_200_personas"
                android:textStyle="italic"
                android:textSize="14sp"
                android:layout_marginStart="50dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

