<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/IbtnMenu"
                android:layout_width="@dimen/Margin_Widht_40dp"
                android:layout_height="@dimen/Margin_height_35dp"
                android:layout_marginStart="@dimen/Margin_Start_10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_menu" />

            <ImageButton
                android:id="@+id/IbtnNotificaciones"
                android:layout_width="@dimen/Margin_Widht_40dp"
                android:layout_height="@dimen/Margin_height_35dp"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/notificaciones"
                android:src="@drawable/ic_notificaciones" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/IVPerfil"
                android:layout_width="@dimen/Margin_Widht_40dp"
                android:layout_height="@dimen/Margin_height_35dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/Margin_End_10dp"
                android:contentDescription="@string/foto_de_perfil"
                android:src="@drawable/ic_perfil"
                app:shapeAppearanceOverlay="@style/CircularImage"
                android:scaleType="centerCrop"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</LinearLayout>